--- a/templates/livraison/suivilivraison.html.twig
+++ b/templates/livraison/suivilivraison.html.twig
@@ -86,7 +86,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background-color: green
+    background-color: red
 }
 
 .timeline-steps .timeline-content .inner-circle:before {
@@ -101,7 +101,7 @@
 }
 .timeline-steps .timeline-content .inner-circleDone:before {
     content: "";
-    background-color: green;
+    background-color: red;
     display: inline-block;
     height: 3rem;
     width: 3rem;
