--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
 			<link rel="stylesheet" href="{{ asset('plugins/fontawesome-free/css/all.min.css') }}">
 			<link rel="stylesheet" href="{{ asset('plugins/fullcalendar/main.css') }}">
 			<link rel="stylesheet" href="{{ asset('dist/css/adminlte.min.css') }}">
+			<link rel="stylesheet" href="{{ asset('plugins/select2/css/select2.min.css') }}" />
 		{% endblock %}
 	</head>
 	<body>
@@ -44,6 +45,15 @@
 						<script src="{{ asset('dist/js/demo.js') }}"></script>
 						<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 						<script src="{{ asset('dist/js/pages/dashboard.js') }}"></script>
+						<!-- le script ey le CSS Select2 -->
+						<script src="{{ asset('plugins/select2/css/select2.min.css') }}"></script>
+						<script src="{{ asset('plugins/select2/js/select2.min.css') }}"></script>
+						<!-- Initialiser Select2 -->
+						<script>
+							$(document).ready(function() {
+								$('.select2').select2();
+							});
+						</script>
 			{% endblock %}   
 	</body>  
 </html>
