--- a/templates/livreur/Addlivreur.html.twig
+++ b/templates/livreur/Addlivreur.html.twig
@@ -5,7 +5,7 @@
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="{{ asset('dist/img/AdminLTELogo.png') }}" alt="AdminLTELogo" height="60" width="60">
+    <img class="animation__shake" src="{{ asset('dist/img/AdminLTELogohhh.png') }}" alt="AdminLTELogo" height="120" width="120">
   </div>
 
   <!-- Navbar -->
@@ -63,7 +63,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="{{ asset('dist/img/user2-160x160.jpg') }}" class="img-circle elevation-2" alt="User Image">
+          <img src="{{ asset('dist/img/user2-160x160aaa.jpg') }}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block">Admin WeTek</a>
@@ -77,7 +77,7 @@
                with font-awesome or any other icon font library -->
           <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <i class="nav-icon fas fa-user"></i>
               <p>
                 Gestion Livreur 
                 <i class="right fas fa-angle-left"></i>
@@ -100,7 +100,7 @@
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <i class="nav-icon fas fa-truck"></i>
               <p>
                 Gestion Livraison
                 <i class="right fas fa-angle-left"></i>
@@ -165,27 +165,32 @@
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-                    {{ form_start(formAdd) }}
+                    {{ form_start(formAdd,{'attr': {novalidate: 'novalidate'}} ) }}
                 <div class="card-body">
                                     <div class="form-group">
                                     <label for="">ID Livreur</label>
                                     {{ form_widget(formAdd.idlivreur, {'attr': {'placeholder': 'ID Livreur', 'class': 'form-control'}}) }}
+                                    {{form_errors(formAdd.idlivreur)}}
                                    </div>
                                     <div class="form-group">
                                     <label for="">Nom</label>
                                     {{ form_widget(formAdd.nom, {'attr': {'placeholder': 'Votre Nom', 'class': 'form-control'}} ) }}
+                                    {{form_errors(formAdd.nom)}}
                                    </div>
                                    <div class="form-group">
                                     <label for="">Prenom</label>
                                     {{ form_widget(formAdd.prenom, {'attr': {'placeholder': 'Votre Prenom', 'class': 'form-control'}}) }}
+                                    {{form_errors(formAdd.prenom)}}
                                    </div>
                                     <div class="form-group">
                                     <label for="">E-mail</label>
                                     {{ form_widget(formAdd.email, {'attr': {'placeholder': 'Votre E-mail', 'class': 'form-control'}}) }}
+                                    {{form_errors(formAdd.email)}}
                                    </div>
                                     <div class="form-group">
                                     <label for="">Num Tel</label>
                                     {{ form_widget(formAdd.numtel, {'attr': {'placeholder': 'Votre Num Tel', 'class': 'form-control'}}) }}
+                                    {{form_errors(formAdd.numtel)}}
                                    </div>
                                     <div class="form-group">
                                     <label for="">Vehicule</label>
@@ -201,12 +206,14 @@
                                    </div>
                                    <div class="form-group">
                                     <label for="">Image</label>
-                                    {{ form_widget(formAdd.image, {'attr': {'placeholder': 'Votre Image', 'class': 'form-control'} }) }}
+                                    {{ form_widget(formAdd.image, {'attr': {'placeholder': 'Votre Image', 'class': 'form-control-file'} }) }}  
+                                    {{form_errors(formAdd.image)}}
                                    </div>
+                                   <div class="col-md-12 form-group p_star d-flex justify-content-end">
+                                    {{ form_widget(formAdd.submit, {'attr': {'class': 'btn btn-primary'} }) }}
+                                   </div> 
                                 </div>
-                                    <div class="col-md-12 form-group p_star">
-                                    {{ form_widget(formAdd.submit, {'attr': {'class': 'btn_3 text-center'} }) }}
-                                   </div>
+                                    
                                     {{ form_end(formAdd) }}
           </div>
         </div>
