--- a/templates/livreur/showlivreur.html.twig
+++ b/templates/livreur/showlivreur.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<!-- Preloader -->
+  <div class="preloader flex-column justify-content-center align-items-center">
+    <img class="animation__shake" src="{{ asset('dist/img/AdminLTELogohhh.png') }}" alt="AdminLTELogo" height="120" width="120">
+  </div>
 <!-- Site wrapper -->
 <div class="wrapper">
   <!-- Navbar -->
@@ -56,7 +60,7 @@
       <!-- Sidebar user (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="{{ asset('dist/img/user2-160x160.jpg') }}" class="img-circle elevation-2" alt="User Image">
+          <img src="{{ asset('dist/img/user2-160x160aaa.jpg') }}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="../../index.html" class="d-block">Admin WeTek</a>
@@ -69,7 +73,7 @@
                with font-awesome or any other icon font library -->
           <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-plus"></i>
+              <i class="nav-icon fas fa-user"></i>
               <p>
                 Gestion Livreur 
                 <i class="right fas fa-angle-left"></i>
@@ -92,7 +96,7 @@
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-plus"></i>
+              <i class="nav-icon fas fa-truck"></i>
               <p>
                 Gestion Livraison
                 <i class="right fas fa-angle-left"></i>
@@ -135,6 +139,14 @@
 
     <!-- Main content -->
     <section class="content">
+    <form action="{{ path('app_livreur_recherche') }}" method="get" class="mb-3">
+    <div class="input-group">
+        <input type="text" name="q" class="form-control" placeholder="Recherche ici ..." aria-label="Recherche" aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Rechercher</button>
+        </div>
+    </div>
+</form>
 
 <!-- Default box -->
 <div class="card card-solid">
@@ -172,7 +184,7 @@
                             <a href="{{ path('app_livreur_ban', {'id': livreur.id }) }}" class="btn btn-sm btn-danger mr-2">
                                 <i class="fas fa-minus"></i> Bannir
                             </a>
-                            <a href="#" class="btn btn-sm bg-teal mr-2">
+                            <a href="{{path('app_livreur_send_mail',{'id': livreur.idlivreur })}}" class="btn btn-sm bg-teal mr-2">
                                 <i class="fas fa-comments"></i> Envoyer Mail
                             </a>
                             <a href="#" class="btn btn-sm btn-primary">
