--- a/templates/reclamation/index.html.twig
+++ b/templates/reclamation/index.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Watch shop | eCommers</title>
+		<title>Wetek | eCommers</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% block stylesheets %}
