--- a/templates/reclamation/showrecf.html.twig
+++ b/templates/reclamation/showrecf.html.twig
@@ -41,10 +41,10 @@
                                             <li><a href="new_details.html">Nouveau Produit</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Forum</a>
+                                    <li><a href="#">Avis</a>
                                         <ul class="submenu">
                                             <li><a href="{{ path('app_reclamation') }}">Reclamation</a></li>
-                                            <li><a href="{{ path('app_reclamation_showf') }}">Liste des Reclamations</a></li>
+                                            <li><a href="{{ path('app_reclamation_showf') }}">Liste de mes Reclamations</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">Nous Contacter</a></li>
@@ -79,23 +79,32 @@
             <div class="container">
                 <div class="row d-flex justify-content-center">
                     <div class="col-12">
-                        <h2 class="contact-title text-center">List Reclamation</h2>
-                        <a href="{{path('app_reclamation')}}" class="button button-contactForm boxed-btn mb-3">Ajouter Reclamation</a>
+                         <div class="col-md-6">
+            <form action="{{ path('app_reclamation_showf') }}" method="GET" class="text-right-end">
+                <div class="form-group d-inline-block">
+                    <div class="row">
+                    <button type="submit" style="padding: 10px 20px; background-color: red; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 13px;">Trier</button>
+                     </div>
+                </div>
+            </form>
+        </div>
+                        <div class="card card-solid ">
+                        <h2 class="contact-title text-center mt-4">Liste de mes Reclamations</h2>
                         <table class="table">
                             <thead>
                                 <tr>
                                 <th scope="col">Nom</th>
                                 <th scope="col">Email</th>
-                                <th scope="col">Obj</th>
+                                <th scope="col">Objet</th>
                                 <th scope="col">Contenu</th>
                                 <th scope="col">Date</th>
                                 <th scope="col">Etat</th>
                                 <th scope="col">Image</th>
-                                <th scope="col">Action</th>
+                                <th scope="col">Reponses</th>
                                 </tr>
                             </thead>
                             <tbody>
-                            {% for reclamationf in reclamationsf %}
+                            {% for reclamationf in reclamationf %}
                                 <tr>
                                 <th>{{reclamationf.nom}}</th>
                                 <td>{{reclamationf.email}}</td>
@@ -103,15 +112,39 @@
                                 <td>{{reclamationf.contenu}}</td>
                                 <td>{{reclamationf.type}}</td>
                                 {% if reclamationf.etat == 0  %}
-                                <td> Non Traitée</td>
+                                <td style="color: red; font-weight: bold;">Non Traitée</td>
                                 {% elseif reclamationf.etat == 1 %}
-                                    <td>Traitée</td>
+                                    <td style="color: green; font-weight: bold;">Traitée</td>
                                 {% endif %}
                                 
                                 <td>{% if reclamationf.image %}
                                     <img src="{{ asset('imgrec/' ~ reclamationf.image) }}" alt="user-avatar" class="img-circle img-fluid mx-auto" style="width: 200px;">
                                 {% endif %}</td>
-                                <td><a href="{{path('app_reclamation_edit', {'id': reclamationf.id })}}" style="color : black;">Edit</a> | <a href="{{path('app_reclamation_deletef', {'id': reclamationf.id })}}" style="color : black;">Delete</a></td>
+                                <td>
+                                 {% if reclamationf.etat == 1 %}
+                                   <style>
+                                .green-link {
+                                display: inline-block;
+                                padding: 10px 15px;
+                                background-color: #4CAF50; /* Green background color */
+                                color: #fff; /* White text color */
+                                text-decoration: none;
+                                border-radius: 5px;
+                                transition: background-color 0.3s ease, color 0.3s ease;
+                                }
+
+                               .green-link:hover {
+                               background-color: #45a049; /* Darker green on hover */
+                               color: #fff; /* White text color on hover */
+                               transform: scale(1.05);
+                               }
+                               </style>
+
+    <a href="{{ path('app_reponse_showf', {'id': reclamationf.id }) }}" class="green-link"> Reponse</a>
+ 
+                                {% else %} 
+                                {% endif %}
+                                </td>
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -122,6 +155,8 @@
                        
                             </div>
                     </div>
+                </div>
+                </div>
                 </div>
             </div>
         </section>
